# python-workshop

./: .gitignore  .pre-commit-config.yaml  .profile  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yaml
app/: config.py  constants.py  main.py
app/config/: settings.yaml
app/data/: questions.csv
app/utils/: aggregate.py  parse_csv.py
docs/: .placeholder
examples/: cli.py  first.py
