[build-system]
# hatchling pinned for reproducibility: version should be kept up-to-date
build-backend = "hatchling.build"
requires = [
  "hatchling",
  "hatch-vcs",
]

[project]
authors = [
  {email = "vwildner@redhat.com"},
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Natural Language :: English",
  "Operating System :: POSIX :: Linux",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: Implementation :: CPython",
  "Topic :: Software Development",
]
dependencies = [
  "httpx",
]
description = "A guided tour to modern Python development"
dynamic = ["version"]
keywords = [
  "workshop",
  "tutorial",
]
license = {text = "MIT"}
name = "workshop"
readme = "README.md"
requires-python = ">=3.10"

[project.optional-dependencies]
dev = [
  "black",
  "isort",
  "ipdb",
  "ipython",
]

[tool.hatch.build.targets.sdist]
include = [
  "/docs",
  "/examples",
  "/tests",
  "/tuf",
  "/requirements*.txt",
  "/tox.ini",
  "/setup.py",
]

[tool.hatch.build.targets.wheel]
# The testing phase changes the current working directory to `tests` but the test scripts import
# from `tests` so the root directory must be added to Python's path for editable installations
dev-mode-dirs = ["."]

# Read more here: https://black.readthedocs.io/en/stable/usage_and_configuration/the_basics.html#configuration-via-a-file
[tool.black]
line-length = 88

# Read more here: https://pycqa.github.io/isort/docs/configuration/config_files.html
[tool.isort]
line_length = 88
profile = "black"

[tool.hatch.version]
raw-options.version_scheme = "calver-by-date"
source = "vcs"
